<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/restaurant2"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_telivigala"
            android:gravity="center"
            android:text="@string/app_title"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="#2196F3"
            android:textSize="66sp" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:hint="@string/name_edit"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/mobileNoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:hint="@string/mobile_edit"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/groupSizeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:hint="@string/group_edit"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_telivigala"
                android:gravity="center"
                android:text="@string/date_text"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#2196F3"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/bookingDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_telivigala"
                android:gravity="center"
                android:text="@string/time_text"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#2196F3"
                android:textSize="20sp" />

            <TimePicker
                android:id="@+id/bookingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>
        </LinearLayout>
        <RadioGroup
            android:id="@+id/smokeArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/smoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/radio_smoke"
                android:textColor="#2196F3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/noSmoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/radio_sNOke"
                android:textColor="#2196F3"
                android:textSize="16sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirmBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/confirm_button" />

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/reset_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/allInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>